--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Roboto, sans-serif;
 }
@@ -8,20 +7,20 @@ body {
   margin-left: 80px;
 }
 
-  /* Свойства ссылок */
+/* Свойства ссылок */
 a {
   display: block;
-  text-decoration:none;
+  text-decoration: none;
   margin-bottom: 1.2em;
   position: relative;
 }
 
-  /* Что делать при наведении на ссылку */
+/* Что делать при наведении на ссылку */
 a:hover {
-  color:#FFD700;
+  color: #FFD700;
 }
 
-  /* Этим свойством добавляем подчеркивание через создание псевдокласса */
+/* Этим свойством добавляем подчеркивание через создание псевдокласса */
 a::after {
   content: '';
   position: absolute;
@@ -41,17 +40,21 @@ h2 {
   margin: 1.25em 0;
 }
 
-  /* Свойства фотографии*/
+/* Свойства фотографии */
 .photo {
-  border-radius: 100px;
-  /* Радиус скругления */
-  border: 3px solid transparent;
-  /* Параметры рамки */
+  border-radius: 100px; /* Радиус скругления */
+  border: 3px solid transparent; /* Параметры рамки */
   box-shadow: 0 4px 15px 0px rgba(0, 0, 0, 0.52);
   object-fit: cover;
 }
 
-  /* Эффект наведения на картинку */
+/* Эффект наведения на картинку */
 .photo:hover {
   border: 3px solid #FFD700;
+}
+
+/* Новый класс для текста "QA Engineer" */
+.bold-text {
+  font-size: 1.5em; /* Это соответствует размеру h2 */
+  font-weight: bold; /* Если хотите, чтобы текст был жирным */
 }
